@@ -1,3 +1,7 @@
+2005-11-28 Michael Hutchinson <m.j.hutchinson@gmail.com>
+
+	* Toolbox.cs: initial migration to GTK# TreeView
+
 2005-09-19 Michael Hutchinson <m.j.hutchinson@gmail.com>
 
 	* Toolbox.cs: Oops, broke TextToolboxItem functionality. Fix not to look up types if ToolboxItem has null TypeName.
